--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,7 @@
 * {
-    box-sizing: border-box;
+    box-sizing     : border-box;
+    text-decoration: none;
+    list-style     : none;
 
 }
 
@@ -12,88 +14,116 @@ body {
     margin     : 0;
 }
 
-h1 {
-    font-size: 3.5em;
-}
-
-h2 {
-    font-size: 2.7em;
-}
-
-h3 {
-    font-size: 2em;
-}
-
-p {
-    font-size: 1.25em;
-}
-
-ul {
-    list-style: none;
-}
-
-li {
-    font-size: 1.25em;
-}
-
-button {
-    font-size       : 1.25em;
-    font-weight     : bold;
-    padding         : 10px 30px;
-    border-radius   : 5px;
-    border          : 2px solid rgba(0, 0, 0, 0.3);
-    box-shadow      : 2px 2px 10px rgba(0, 0, 0, 0.5);
-    color           : white;
-    background-color: blueviolet;
-}
-
-button:hover {
-    background-color: rgb(101, 33, 165);
-}
-
 .container {
-    max-width: 1400px;
-    margin   : auto;
+    max-width: 1200px;
+    margin   : 0 auto;
 }
 
-.color-acento {
-    color: blueviolet;
-}
-
-header {
-    background-color: rgb(245, 245, 245);
-
-}
-
-header .logo img {
-    margin   : 0;
-    max-width: 50px;
+.header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
+        url(./assets/pizzas.jpg);
+    background-position: center bottom;
+    background-repeat  : no-repeat;
+    background-size    : cover;
+    min-height         : 100vh;
+    display            : flex;
+    align-items        : center;
 
 }
 
-header .container {
-    display       : flex;
-    flex-direction: column;
-    align-items   : center;
+.menu {
+    position       : absolute;
+    top            : 0;
+    left           : 0;
+    right          : 0;
+    display        : flex;
+    align-items    : center;
+    justify-content: space-between;
 }
 
-header nav {
-    display       : flex;
-    flex-direction: column;
-    text-align    : center;
-    padding-bottom: 25px;
+.logo {
+    color      : blueviolet;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size  : 25px;
+    font-weight: 200px;
 }
 
-header a {
-    padding        : 5px 12px;
-    text-decoration: none;
-    font-weight    : bold;
-    color          : black;
+.logo:hover {
+    color     : #CE9678;
+    width     : 450px;
+    padding   : 15px;
+    transition: 0.5s;
+
 }
 
-header a:hover {
-    color: blueviolet;
+.menu .navbar {
+    position: relative;
+    float   : left;
+
 }
+
+.menu .navbar a {
+    font-size  : 18px;
+    padding    : 20px;
+    color      : #fffdfc;
+    display    : inline-block;
+    font-weight: 600;
+
+}
+
+.menu .navbar a:hover {
+    color: #CE9678;
+
+}
+
+#menu {
+    display: none;
+
+}
+
+.menu-icono {
+    width: 25px;
+
+}
+
+.menu label {
+    cursor : pointer;
+    display: none;
+}
+
+.header-content {
+    text-align: center;
+}
+
+.header-content h1 {
+    font-size     : 75px;
+    line-height   : 80px;
+    color         : #F9FAFC;
+    text-transform: uppercase;
+    margin-bottom : 35px;
+
+}
+
+.header-content p {
+    font-size    : 16px;
+    color        : #C5C5C5;
+    padding      : 0 250px;
+    margin-bottom: 25px;
+}
+
+.btn-1 {
+    display         : inline-block;
+    padding         : 11px 35px;
+    background-color: #CE9678;
+    color           : #F9FAFC;
+    text-transform  : uppercase;
+}
+
+.btn-1:hover {
+    background-color: #CE9690;
+}
+
 
 #hero {
     display        : flex;
@@ -101,26 +131,36 @@ header a:hover {
     justify-content: center;
     text-align     : center;
     flex-direction : column;
-    height         : 90vh;
+    height         : 110vh;
     background-image: linear-gradient(0deg,
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)), url('./assets/pizzas.jpg');
-    background-repeat  : no-repeat;
-    background-size    : cover;
-    background-position: center center;
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)), url(./assets/panadero.jpg);
+    background-attachment: fixed;
+    background-repeat    : no-repeat;
+    background-size      : cover;
+
 }
 
 #hero h1 {
     color: white;
 }
 
-#hero button {
-    font-size: 1.75em;
+.color-acento {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color      : blueviolet;
 }
+
 
 #somos-proya .container {
     text-align: center;
     padding   : 200px 12px;
+    gap       : 10px;
+}
+
+#somos-proya .texto p {
+    font-family: monospace, sans-serif;
+    font-size  : 20px;
+
 }
 
 #nuestros-productos {
@@ -147,7 +187,7 @@ header a:hover {
     background-size    : cover;
     padding            : 50px 0px;
     margin             : 30px;
-    border-radius      : 15px;
+    border-radius      : 10px;
 }
 
 .carta:first-child {
@@ -160,13 +200,13 @@ header a:hover {
 .carta:nth-child(2) {
     background-image: linear-gradient(0deg,
             rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)), url("./assets/cake.png");
+            rgba(0, 0, 0, 0.5)), url("./assets/helados.webp");
 }
 
 .carta:nth-child(3) {
     background-image: linear-gradient(0deg,
             rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)), url("./assets/helados.webp");
+            rgba(0, 0, 0, 0.5)), url("./assets/wafle.png");
 
 }
 
@@ -180,7 +220,7 @@ header a:hover {
     font-weight: bold;
 }
 
-#final {
+.final {
     display         : flex;
     flex-direction  : column;
     justify-content : center;
@@ -191,26 +231,39 @@ header a:hover {
     height          : 80vh;
 }
 
-#final h2 {
-    font-size: 9vw;
-}
-
-#final button {
+.final h2 {
     font-size: 5vw;
 }
 
+.final a {
+    display         : inline-block;
+    padding         : 11px 35px;
+    background-color: #CE9678;
+    color           : #F9FAFC;
 
-/* contacto */
-.contacto .datos {
-    padding            : 5.625rem 0 11.875rem 0;
-    position           : relative;
-    background-image   : url('./assets/barra.png');
-    background-size    : cover;
-    background-position: center;
-    background-repeat  : no-repeat;
 }
 
-.contacto .datos .overlay {
+.final a:hover {
+    background-color: #CE9690;
+    cursor          : pointer;
+}
+
+
+/*////// contacto /////////////*/
+
+#contacto .datos {
+    padding : 5.625rem 0 11.875rem 0;
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
+        url('./assets/barra.png');
+    background-size      : cover;
+    background-position  : center;
+    background-repeat    : no-repeat;
+    background-attachment: fixed;
+}
+
+#contacto .datos .overlay {
     position  : absolute;
     width     : 100%;
     height    : 100%;
@@ -219,7 +272,7 @@ header a:hover {
     z-index   : 1;
 }
 
-.contacto .datos .container {
+#contacto .datos .container {
     position               : relative;
     z-index                : 2;
     display                : -webkit-box;
@@ -235,7 +288,7 @@ header a:hover {
     flex-wrap              : wrap;
 }
 
-.contacto .datos .container .blurb {
+#contacto .datos .container .blurb {
     background: #fff;
     border    : 6px double #eaeaea;
     padding   : 2.25rem;
@@ -243,20 +296,20 @@ header a:hover {
     width     : 25%;
 }
 
-.contacto .datos .container .blurb h3 {
+#contacto .datos .container .blurb h3 {
     font-size    : 1.5rem;
     font-weight  : 400;
     line-height  : 2.6875rem;
     margin-bottom: 1.125rem;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #611111;
 }
 
-.contacto .datos .container .blurb p {
+#contacto .datos .container .blurb p {
     font-size: 1rem;
     color    : #777777;
 }
 
-.contacto .formulario {
+#contacto .formulario {
     position  : relative;
     z-index   : 3;
     background: #fff;
@@ -267,14 +320,14 @@ header a:hover {
     width     : 90%;
 }
 
-.contacto .formulario .formulario_contacto .input-group {
+#contacto .formulario .formulario_contacto .input-group {
     position     : relative;
     margin-bottom: 32px;
 }
 
-.contacto .formulario .formulario_contacto .input-group input[type="text"],
-.contacto .formulario .formulario_contacto .input-group input[type="email"],
-.contacto .formulario .formulario_contacto .input-group textarea {
+#contacto .formulario .formulario_contacto .input-group input[type="text"],
+#contacto .formulario .formulario_contacto .input-group input[type="email"],
+#contacto .formulario .formulario_contacto .input-group textarea {
     font-family   : 'Poppins';
     font-size     : 16px;
     color         : #303133;
@@ -287,26 +340,26 @@ header a:hover {
     vertical-align: top;
 }
 
-.contacto .formulario .formulario_contacto .input-group input[type="text"]:focus,
-.contacto .formulario .formulario_contacto .input-group input[type="email"]:focus,
-.contacto .formulario .formulario_contacto .input-group textarea:focus {
+#contacto .formulario .formulario_contacto .input-group input[type="text"]:focus,
+#contacto .formulario .formulario_contacto .input-group input[type="email"]:focus,
+#contacto .formulario .formulario_contacto .input-group textarea:focus {
     outline      : none;
     border-bottom: 2px solid #b4975a;
 }
 
-.contacto .formulario .formulario_contacto .input-group textarea {
+#contacto .formulario .formulario_contacto .input-group textarea {
     max-width : 100%;
     max-height: 10.25rem;
     min-height: 5.125rem;
     min-width : 100%;
 }
 
-.contacto .formulario .formulario_contacto .input-group label {
+#contacto .formulario .formulario_contacto .input-group label {
     color      : #777;
     font-family: 'Poppins';
 }
 
-.contacto .formulario .formulario_contacto .input-group label.label {
+#contacto .formulario .formulario_contacto .input-group label.label {
     /* position          : absolute; */
     top               : 16px;
     left              : 0;
@@ -320,7 +373,7 @@ header a:hover {
     transition        : all 0.3s ease;
 }
 
-.contacto .formulario .formulario_contacto .input-group label.label.active {
+#contacto .formulario .formulario_contacto .input-group label.label.active {
     top        : -12px;
     margin-left: 0;
     font-size  : 12px;
@@ -328,13 +381,13 @@ header a:hover {
     color      : #777;
 }
 
-.contacto .formulario .formulario_contacto .input-group .error {
+#contacto .formulario .formulario_contacto .input-group .error {
     position   : absolute;
     font-family: 'Poppins';
     font-size  : 0.875rem;
 }
 
-.contacto .formulario .formulario_contacto input[type="submit"] {
+#contacto .formulario .formulario_contacto input[type="submit"] {
     font-family       : 'Poppins';
     background        : #b4975a;
     color             : #fff;
@@ -352,7 +405,7 @@ header a:hover {
     transition        : all 0.3s ease;
 }
 
-.contacto .formulario .formulario_contacto input[type="submit"]:hover {
+#contacto .formulario .formulario_contacto input[type="submit"]:hover {
     background: #977c44;
 }
 
@@ -375,24 +428,9 @@ footer .container {
     align-items    : flex-end;
 }
 
-/* Media Queries */
+/*/////////// Inicio de Media Queries ///////////// */
 
-@media (min-width: 850px) {
-    header {
-        position: fixed;
-        width   : 100%;
-    }
-
-    header .container {
-        flex-direction : row;
-        justify-content: space-between;
-    }
-
-    header nav {
-        flex-direction: row;
-        padding-bottom: 0;
-        padding-right : 20px;
-    }
+@media (min-width: 844px) {
 
     #hero h1 {
         font-size: 5em;
@@ -418,11 +456,11 @@ footer .container {
     }
 
     #somos-proya .img-container {
-        background-image   : url("./assets/cafe.png");
+        background-image   : url("./assets/app-comida.jpg");
         background-size    : cover;
         background-position: center center;
-        height             : 500px;
-        width              : 400px;
+        height             : 400px;
+        width              : 500px;
     }
 
     #nuestros-productos .productos {
@@ -476,35 +514,42 @@ footer .container {
         background-image   : url("./assets/Desayuno.jpg");
         background-repeat  : no-repeat;
         background-size    : 500px 400px;
-        background-position: calc(100vw - 500px) 120px;
+        background-position: calc(100vw - 600px) 120px;
     }
 
     #caracteristicas .container {
         text-align: initial;
+
     }
 
     #caracteristicas ul {
         margin-left: 100px;
     }
 
-    #contacto .container .blurb {
-        padding        : 50px;
-        background-size: 100%;
+    #contacto .container {
+        display        : flex;
+        justify-content: space-evenly;
+        align-items    : center;
+        min-width      : auto;
     }
 
-    #contacto h3 {
-        margin         : 0;
-        padding        : 0%;
-        display        : block;
-        justify-content: center;
-        align-items    : center;
+
+    #contacto .container .blurb {
+        flex-direction: column;
+        padding       : 40px;
+
+    }
+
+    .blurb h3 {
+        margin : 0;
+        padding: 0%;
     }
 
     #final h2 {
         font-size: 5em;
     }
 
-    #final button {
+    #final a {
         font-size: 2em;
     }
 
@@ -514,9 +559,41 @@ footer .container {
 }
 
 
+@media(max-width: 1020px) {
+    .menu {
+        padding: 30px;
+    }
 
-@media (min-width: 1200px) {
-    #caracteristicas {
-        background-position-x: calc(100vw - 800px);
+    .menu label {
+        display: initial;
+    }
+
+    .menu .navbar {
+        position        : absolute;
+        top             : 100px;
+        left            : 0;
+        right           : 0;
+        background-color: #323337;
+        display         : none;
+    }
+
+    .menu .navbar a {
+        width: 100%;
+    }
+
+    #menu:checked~.navbar {
+        display: initial;
+    }
+
+    .header {
+        min-height: 0vh;
+    }
+
+    .header-content {
+        padding: 100px 30px;
+    }
+
+    .header-content p {
+        padding: 0;
     }
 }
