--- a/estilos.css
+++ b/estilos.css
@@ -301,7 +301,7 @@ body {
     font-weight  : 400;
     line-height  : 2.6875rem;
     margin-bottom: 1.125rem;
-    border-bottom: 1px solid #611111;
+    border-bottom: 1px solid #b4975a;
 }
 
 #contacto .datos .container .blurb p {
@@ -596,5 +596,21 @@ footer .container {
 
     .header-content p {
         padding: 0;
+    }
+
+    #contacto .datos .container {
+        position       : relative;
+        z-index        : 2;
+        display        : flex;
+        flex-direction : column;
+        justify-content: center;
+        align-content  : center;
+    }
+
+    #contacto .container .blurb {
+        display  : block;
+        min-width: 100%;
+
+
     }
 }
