--- a/estilos.css
+++ b/estilos.css
@@ -397,8 +397,8 @@ body {
     display           : block;
     margin            : 0 auto;
     margin-top        : 3.125rem;
-    padding           : 15px;
-    width             : 20%;
+    padding           : 10px;
+    width             : auto;
     outline           : none;
     -webkit-transition: all 0.3s ease;
     -o-transition     : all 0.3s ease;
@@ -515,7 +515,7 @@ footer .container {
         background-image   : url("./assets/Desayuno.jpg");
         background-repeat  : no-repeat;
         background-size    : 500px 400px;
-        background-position: calc(100vw - 600px) 120px;
+        background-position: calc(100vw - 500px) 80px;
     }
 
     #caracteristicas .container {
@@ -524,7 +524,7 @@ footer .container {
     }
 
     #caracteristicas ul {
-        margin-left: 100px;
+        margin-left: 70px;
     }
 
     #contacto .container {
